--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": [
-    "server"
+    "server",
+    "mock"
   ]
 }
