--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postbuild": "npm run copyfilesToDist",
     "copyfilesToDist": "copyfiles package.json package-lock.json README.md dist",
     "clean": "rimraf dist",
-    "doc": "cd website && npm start"
+    "doc": "cd website && npm start",
+    "doc:build": "cd website && npm run build"
   },
   "author": "Peng Yanbing <info@implicitcast.com> (http://implicitcast.com)",
   "license": "ISC",
