--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,9 @@ jobs:
         run: npm publish ./dist --tag ${{ steps.npmVersioning.outputs.tag }} --access public
         env:
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN  }}
+        
+      - name: doc publish
+        run: cd website && npm run build && publish-gh-pages
+        env:
+          GIT_USER=pengyanb
 
