--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,5 +42,5 @@ jobs:
       - name: doc publish
         run: cd website && npm install && npm run build && npm run publish-gh-pages
         env:
-          GIT_USER: pengyanb
+           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
