--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN  }}
         
       - name: doc publish
-        run: cd website && git config --global user.email ${{ secrets.GH_EMAIL }} && git config --global user.name ${{ secrets.GH_USER }} && npm install && npm run build && npm run publish-gh-pages
+        run: cd website && git config --global user.email ${{ secrets.GH_EMAIL }} && git config --global user.name ${{ secrets.GH_USER }} && git config --global user.password ${{ secrets.GH_TOKEN }} && npm install && npm run build && npm run publish-gh-pages
         env:
            GH_TOKEN: ${{ secrets.GH_TOKEN }}
            GIT_USER: ${{ secrets.GH_USER }}
