--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: "12"
+          node-version: "12.x"
 
       - name: npm install
         run: |
@@ -34,15 +34,39 @@ jobs:
           release-branch: "master"
           package-json-path: "./dist/package.json"
 
-      - name: npm publish
-        run: npm publish ./dist --tag ${{ steps.npmVersioning.outputs.tag }} --access public
+  gh-release:
+    if: github.event_name != 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Add key to allow access to repository
         env:
-          NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN  }}
-        
-      - name: doc publish
-        run: cd website && git config --global user.email ${{ secrets.GH_EMAIL }} && git config --global user.name ${{ secrets.GH_USER }} && git config --global user.password ${{ secrets.GH_TOKEN }} && npm install && npm run build && npm run publish-gh-pages
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          echo "${{ secrets.GH_TOKEN }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          cat <<EOT >> ~/.ssh/config
+          Host github.com
+          HostName github.com
+          IdentityFile ~/.ssh/id_rsa
+          EOT
+      - name: Release to GitHub Pages
         env:
-           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-           GIT_USER: ${{ secrets.GH_USER }}
-           CURRENT_BRANCH: master
-
+          USE_SSH: true
+          GIT_USER: git
+        run: |
+          git config --global user.email "${{ secrets.GH_EMAIL }}"
+          git config --global user.name "${{ secrets.GH_USER }}"
+          if [ -e yarn.lock ]; then
+          yarn install --frozen-lockfile
+          elif [ -e package-lock.json ]; then
+          npm ci
+          else
+          npm i
+          fi
+          npx docusaurus deploy
