--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,4 +71,4 @@ jobs:
           else
           npm i
           fi
-          cd website && npx docusaurus deploy
+          cd website && npm install && npm run build && npm run publish-gh-pages
